--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -406,12 +406,13 @@ h3 {
   font-size: 1.5rem;
   padding-bottom: 1rem;
   padding-top: 0.75rem;
+  font-family: "Roboto", sans-serif !important;
 }
-.h3 {font-size: 1.5rem;}
+.h3 {font-size: 1.5rem; font-family: "Roboto", sans-serif !important;}
 
-h4, .h4 {font-size: 1.4rem;}
+h4, .h4 {font-size: 1.4rem; font-family: "Roboto", sans-serif !important;}
 
-h5, .h5 {font-size: 0.8rem;}
+h5, .h5 {font-size: 0.8rem; }
 
 /* General */
 
