updated arrow links, video image style, business news style

--- a/pages/_includes/news-feed-home.html
+++ b/pages/_includes/news-feed-home.html
@@ -19,12 +19,10 @@
     
       </div>
     
-      <a class="button trigger cwdsarrow-parent" href="latest-news/">
-        <div class="button-label">{{varViewMoreNews}}</div>
-        <cwds-arrow data-class-prefix="more-news" data-class-list="cwdsarrow-size-md cwdsarrow-idle-blue cwdsarrow-hover-darkblue cwdsarrow-focus-orangeback"></cwds-arrow>
-
+      <a href="latest-news/" class="link-arrow-blue mt-4">
+        <div class="link-arrow-label">{{varViewMoreNews}}</div><cagov-arrow></cagov-arrow>
       </a>
-    
+
     </div>
     </section>
 </news-section>
