--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -35,14 +35,13 @@
 							</a>
 						</h1>
 						<h2 class="hero-subhead">{{ varHeroP2 }}</h2>
-						<a class="hero-button button orange-button cwdsarrow-parent" href="{{ "safer-economy/" | toTranslatedPath(tags) }}">
-							<div class="button-label">
-								<span>
-									<p>{{ varHeroP1 }}</p>
-								</span>
-							</div>
-							<cwds-arrow data-class-prefix="hero" data-class-list="cwdsarrow-size-md cwdsarrow-idle-lightblue cwdsarrow-hover-white cwdsarrow-focus-orange"></cwds-arrow>
+						
+						<a href="{{ "safer-economy/" | toTranslatedPath(tags) }}" class="link-arrow-lightblue justify-content-start">
+							<div class="link-arrow-label">{{ varHeroP1 }}</div>
+							<cagov-arrow></cagov-arrow>
 						</a>
+						
+						
 					</div>
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
@@ -196,7 +195,7 @@
 			<div class="col-lg-8 mx-auto text-center">
 			<h2 class="color-purple mb-0 pb-2">{{item["Video Title"]}}</h2>
 			<p class="mb-3 text-300">{{item["Description"]}}</p>
-				<article class="video-item transition-0_3 transform-scale-hover mx-auto mt-3" data-video="{{item["VideoID"]}}">
+				<article class="video-item mx-auto mt-3" data-video="{{item["VideoID"]}}">
 					<a class="video-modal-open video-thumb-link w-100 w-lg-40" data-video="{{item["VideoID"]}}" href="https://{{item["VideoURL"]}}">
 						<figure class="video-thumb-photo">
 							<div class="video-thumb-play-button">
@@ -209,10 +208,12 @@
 					</a>
 				</article>
 
-				<a class="button trigger video-modal-open cwdsarrow-parent" href="https://{{item["VideoURL"]}}" data-video="{{item["VideoID"]}}">
-				<div class="button-label">{{item["ButtonText"]}}</div>
-				<cwds-arrow data-class-prefix="watch-video" data-class-list="cwdsarrow-size-md cwdsarrow-idle-black cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
+				<a href="https://{{item["VideoURL"]}}" data-video="{{item["VideoID"]}}" class="link-arrow-blue video-modal-open trigger mt-4" data-video="{{item["VideoID"]}}">
+					<div class="link-arrow-label">{{item["ButtonText"]}}</div>
+					cagov-arrow></cagov-arrow>
 				</a>
+
+		
 				</div>
 				</div>
 				</div>
