--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -80,7 +80,7 @@
 						</div>
 					</div>		
 					<div class="hero-stats-footer">
-						<a class="hero-stats-footer-link mt-2" href="{{ 'safer-economy/' | toTranslatedPath(tags) }}">{{varCountyMap}}</a>
+						<a class="hero-stats-footer-link mt-2" href="{{ 'safer-economy/' | toTranslatedPath(tags) }}#county-status">{{varCountyMap}}</a>
 						<a class="hero-stats-footer-link mt-2" href="https://update.covid19.ca.gov/">{{varStateSummary}}</a>
 					</div>
 				</div>
