mapping race,ethnicity to desired terms, fix alignments

--- a/src/js/equity-dash/charts/missingness/index.scss
+++ b/src/js/equity-dash/charts/missingness/index.scss
@@ -23,7 +23,7 @@ cagov-chart-equity-missingness {
     font-size: 0.95rem;
     text-anchor: unset;
   }
-  .bar-label text::first-letter {
+  .bar-label .tick text {
     text-transform: capitalize;
   }
   .label {
