update spacing next to bar chart so that arrow line and larger numbers do not touch.

--- a/src/js/equity-dash/charts/missingness/index.scss
+++ b/src/js/equity-dash/charts/missingness/index.scss
@@ -36,6 +36,7 @@ cagov-chart-equity-missingness {
   }
   .highlight-data {
     font-weight: bold;
+    padding-right: 2px;
   }
 
   .equity-tooltip {
