--- a/pages/_includes/dashboard.njk
+++ b/pages/_includes/dashboard.njk
@@ -19,8 +19,8 @@
 {%-set _varStatIcuChange_ = (data.ICU_COVID_CONFIRMED_PATIENTS_DAILY + data.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 {%-set _varStatHospitalChangeText_ = 'an increase of' if _varStatHospitalChange_ >= 0 else 'a decrease of' -%}
 {%-set _varStatIcuChangeText_ = 'an increase of' if _varStatIcuChange_ >= 0 else 'a decrease of' -%}
-{%-set _varTierDate_ = data.TIER_DATE | formatDate2(false, tags) -%}
-{%-set _varTierEndDate_ = data.TIER_ENDDATE | formatDate2(false, tags) -%}
+{%-set _varTierDate_ = tierData.TIER_DATE | formatDate2(false, tags) -%}
+{%-set _varTierEndDate_ = tierData.TIER_ENDDATE | formatDate2(false, tags) -%}
 
 
 <div class="bg-lightblue py-5">
