Work on CCG-556 and CCG-557 alignment of chart labels and spacing

--- a/src/js/equity-dash/charts/missingness/index.scss
+++ b/src/js/equity-dash/charts/missingness/index.scss
@@ -3,8 +3,11 @@ cagov-chart-equity-missingness {
   display: block;
   margin: auto;
   width: 100%;
+  .chart-title {
+    max-width: 613px;
+  }
   .svg-holder {
-    max-width: 600px;
+    max-width: 613px;
   }
 
   .bars {
