--- a/src/css/_equitydash.scss
+++ b/src/css/_equitydash.scss
@@ -330,3 +330,19 @@ cagov-chart-d3-bar h2 {margin-top: 3rem;}
     margin: 0 auto;
   }
 }
+
+.bg-darkblue a,
+.bg-darkblue a:focus {
+  color: #92C5DE; 
+  text-decoration: underline;
+}
+
+.bg-darkblue a:hover {
+  color: #92C5DE;
+  text-decoration: none;
+}
+
+.bg-darkblue a:visited {
+  color: #B797D8;
+  text-decoration: underline;
+}
