--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -13,10 +13,6 @@
 	{{ super() }}
 {% endblock %}
 
-{% block headJS %}
-	<script>const videoID='{{varVideoID}}';</script>
-{% endblock %}
-
 {% block preHeader %}
 	<cwds-survey data-npi-survey-url="{{ tags | npiSurveyUrl | safe }}" data-pulse-survey-url="{{ tags | pulseSurveyUrl | safe }}" data-survey-prompt="{{Terms[9].Text}}" data-pulse-survey-prompt="{{Terms[10].Text}}"></cwds-survey> 
 {% endblock %}
@@ -186,10 +182,10 @@
 	<section class="video trigger bg-lightblue" role="region" aria-labelledby="video-resources">
 		<div class="video-wrap text-center">
 
-			{% set JSONgovraw %}{% include "../wordpress-posts/common-page-labels.json" %}{% endset %}
-			{% set JSONgov = JSONgovraw | jsonparse %}
-			{%- set RowsGov = JSONgov.Table5 -%}
-			{% for item in RowsGov %}
+			{% set JSONVidraw %}{% include "../wordpress-posts/common-page-labels.json" %}{% endset %}
+			{% set JSONVid = JSONVidraw | jsonparse %}
+			{%- set RowsVid = JSONVid.Table5 -%}
+			{% for item in RowsVid %}
 			<div class="container">
 			<div class="row">
 			<div class="col-lg-8 mx-auto text-center">
@@ -217,6 +213,8 @@
 				</div>
 				</div>
 				</div>
+
+				
 				{% endfor %}
 				
 		</div>
