--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -199,21 +199,34 @@ button.card-header.accordion-alpha:focus {
     text-decoration: none;
     font-family: Montserrat;
     font-style: normal;
-    font-weight: 600;
-    line-height: 3rem;
+    font-weight: 500;
     text-align: center;
-    font-size: 1.25rem;
+    font-size: 1.15rem;
     display: inline-block;
-    padding: 0 20px;
+    padding: 10px;
     background-color: #fff;
     &.d-none {
       display: none;
     }
+    &:hover, &:focus {
+      background-color: #F2F5FC;
+    }
+  }
+  a, a:visited {
+    color: #1d2574;
+  }
+  a.toggle-active, a:visited.toggle-active {
+    color: #fff;
   }
   .toggle-active {
     background-color: #1f2574;
     color: #fff;
+    cursor: default;
+    &:hover, &:focus {
+      background-color: #1f2574;
+    }
   }
+
 }
 
 button.clear {
@@ -238,4 +251,214 @@ button.clear {
   &:focus {
     outline: 2px solid #004abc;
   }
+}
+
+  .small-tab {
+    padding:.5rem .75rem .5rem .75rem;
+    border:1px solid #F2F5FC;
+    text-decoration:underline;
+    color:#1F2574;
+    background:#fff;
+    font-size:.95rem;
+    font-weight: 700 !important;
+    &:hover, &:focus {
+      text-decoration:none;
+      outline-offset: -2px;
+    }
+    &.active, &[aria-expanded="true"] {
+      color:#000;
+      text-decoration:none;
+      cursor: default;
+      &:focus {
+        outline: 2px solid #F2F5FC;
+      }
+    }
+  }
+
+  .large-tabs {
+    border: 1px solid #1f2574!important;
+    background-color: #1f2574!important;
+    display: flex!important;
+    justify-content: center!important;
+    .large-tab {
+      text-decoration: none;
+      font-family: Montserrat;
+      font-style: normal;
+      text-align: center;
+      font-weight: 500;
+      font-size: 1.15rem;
+      display: inline-block;
+      padding: 10px;
+      background-color: #fff;
+      color:#1F2574;
+      min-width: 200px;
+      margin: 0 1px 0 0;
+      border: none;
+      &:hover, &:focus {
+        background-color: #F2F5FC;
+      }
+      &.active, &[aria-expanded="true"] {
+        color:#fff;
+        background-color: #1F2574;
+        text-decoration:none;
+        cursor: default;
+        &:hover, &:focus {
+          background-color: #1F2574;
+        }
+      }
+    } 
+  }
+
+  /* Arrow links */
+  @mixin link-arrow {
+    font-size: 1.2rem;
+    font-family: Montserrat,sans-serif;
+    text-transform: uppercase;
+    text-decoration:none !important;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .3s ease;
+  }
+  .link-arrow-label {
+    margin-right:1em;
+  }
+  .link-arrow-icon {
+    width: 2.75rem;
+    height: 2.75rem; 
+    border-radius: 50%;
+    padding:0;
+    overflow:hidden;
+    transition: all .3s ease;
+    }
+  .link-arrow-icon-svg {
+    width: 60px;
+    height:100%;
+    position:relative;
+    transition: all .3s ease;
+    right:28px;
+  }
+  
+//blue arrow link
+  .link-arrow-blue {
+    @include link-arrow; 
+      color:#1F2574;
+      .link-arrow-icon {
+        border:2px solid #1F2574;
+      }
+      .arrow1, .arrow2 {
+        transition: all .3s ease;
+        fill:#1F2574;
+      }
+      //link hover and focus state
+      &:hover, &:focus {
+        color:#003D9D;
+        .link-arrow-icon {
+          border-color:#003D9D;
+          .arrow1, .arrow2 {fill:#003D9D;}
+        }
+        .link-arrow-icon-svg {right:-10px;}
+      }
+      &:focus {outline: 2px solid #0257d5 !important;}
+    }
+
+    //white arrow link
+  .link-arrow-white {
+    @include link-arrow; 
+      color:#fff !important;
+      .link-arrow-icon {
+        border:2px solid #fff;
+      }
+      .arrow1, .arrow2 {
+        transition: all .3s ease;
+        fill:#fff;
+      }
+      //link hover and focus state
+      &:hover, &:focus {
+        color:#FF8000 !important;        ;
+        .link-arrow-icon {
+          border-color:#FF8000; 
+          .arrow1, .arrow2 {fill:#FF8000;}
+        }
+        .link-arrow-icon-svg {right:-10px;}
+      }
+      &:focus {outline: 2px solid #fff !important;}
+    }
+    
+
+  //light blue  arrow link
+  .link-arrow-lightblue {
+    @include link-arrow; 
+      color:#92C5DE !important;
+      .link-arrow-icon {
+        border:2px solid #92C5DE;
+      }
+      .arrow1, .arrow2 {
+        transition: all .3s ease;
+        fill:#92C5DE;
+      }
+      //link hover and focus state
+      &:hover, &:focus {
+        color:#FF8000 !important;        ;
+        .link-arrow-icon {
+          border-color:#FF8000; 
+          .arrow1, .arrow2 {fill:#FF8000;}
+        }
+        .link-arrow-icon-svg {right:-10px;}
+      }
+      &:focus {outline: 2px solid #fff !important;}
+    }
+
+/* Call to Action Buttons */
+@mixin action-button {
+  display: inline-block;
+  font-family: Montserrat, sans-serif;
+  font-weight: 600;
+  font-size: 1.2rem;
+  text-align: center;
+  vertical-align: middle;
+  user-select: none;
+  border: 0 transparent;
+  padding: 0.625rem 1.5rem;
+  line-height: 1.5;
+  border-radius:50px;
+  text-decoration: none !important;
+  transition: all .3s ease;
+}
+// dark blue button
+.button-blue {
+  @include action-button;
+  background-color: #1F2574;
+  color: #fff !important;
+  &:hover, &:focus {
+    background-color: #FF8000;
+    color: #1F2574 !important;
+  }
+  &:focus {outline: 2px solid #0257d5 !important;}
+}
+// white button
+.button-white {
+  @include action-button;
+  background-color: #fff;
+  color: #1F2574 !important;
+  &:hover, &:focus {
+    background-color: #FF8000;
+    color: #1F2574 !important;
+  }
+  &:focus {outline: 2px solid #fff !important;}
+}
+// light blue button
+.button-lightblue {
+  @include action-button;
+  background-color: #92C5DE;
+  color: #1F2574 !important;
+  &:hover, &:focus {
+    background-color: #FF8000;
+    color: #1F2574 !important;
+  }
+  &:focus {outline: 2px solid #0257d5 !important;}
+}
+
+.bd-4px {
+border-radius: 0.25rem !important;
 }
