--- a/pages/_includes/footer.njk
+++ b/pages/_includes/footer.njk
@@ -131,11 +131,12 @@ ga('tracker3.send', 'pageview');
 {% endpagesection -%}
 
 {%- pagesection page, "equity" %}
-	<script src="https://d3js.org/d3.v6.min.js"></script><!-- had some trouble importing this, error circular dependencies after npm install so including here -->
+	<script type="module" src="https://d3js.org/d3.v6.min.js"></script><!-- had some trouble importing this, error circular dependencies after npm install so including here -->
 	<script>const chartsDataLoc="{{ envconfig.equityChartsDataHome }}"</script>
 	{{ macros.includeJavascriptByEnv('equitydash', env.dev) }}
 {% endpagesection -%}
 
+<script nomodule src="https://d3js.org/d3.v5.min.js"></script><!-- lot of transpilation issues, using older d3 for ie -->
 <script nomodule src="/js/es5.js"></script>
 
 {% include "googletranslate.njk" %}
