--- a/pages/_includes/dashboard.njk
+++ b/pages/_includes/dashboard.njk
@@ -177,6 +177,14 @@
 
         </div>
 
+        <div class="text-center">
+
+            <a class="button trigger cwdsarrow-parent hi-50" href="/data-and-tools/">
+            <div class="button-label">Explore more data</div>
+            <cwds-arrow data-class-prefix="more-news" data-class-list="cwdsarrow-size-md cwdsarrow-idle-blue cwdsarrow-hover-darkblue cwdsarrow-focus-orangeback"><figure class="cwdsarrow more-news-cwdsarrow cwdsarrow-size-md cwdsarrow-idle-blue cwdsarrow-hover-darkblue cwdsarrow-focus-orangeback" aria-hidden="true"></cwds-arrow>
+            </a>
+        </div>
+
         <div class="row d-flex justify-content-md-center">
 
             <h2 class="text-center color-purple">This data drives decisions that keep California healthy and safe</h2>
