--- a/src/css/trilogy/namespaced/shell/_expanded-menu.scss
+++ b/src/css/trilogy/namespaced/shell/_expanded-menu.scss
@@ -1,4 +1,9 @@
 cagov-navoverlay {
+  a.expanded-menu-section-header-link {
+    /* jbum - this is to override the inherited text-decoration from .interior_page a */
+    text-decoration: none;
+  }
+
   .expanded-menu {
     background: $darkblue;
     @include size(85vw, 100%);
@@ -77,9 +82,11 @@ cagov-navoverlay {
             max-height: 100rem;
            // padding-top: 0.5rem;
           }
-        }
-        .expanded-menu-section-header-link {
-          color: $white;
+          @media (max-width:48rem) {
+            .expanded-menu-section-header-link {
+              color: $white;
+            }
+          }
         }
         .expanded-menu-section-header-arrow-svg {
           transform: rotate(180deg);
@@ -93,17 +100,19 @@ cagov-navoverlay {
           margin-bottom: 0rem;
         }
         &-link {
-          font-family: $headline;
+          font-family: $body;
+          font-weight: 700;
+          font-size: 1.5rem;
           color: $orange;
           width: 100%;
-          text-transform: uppercase;
+          text-transform: none;
           display: block;
           text-align: left;
           transition: $basic;
           background: transparent;
           border: none;
-          font-size: 0.9rem;
-          padding: 0.25rem;
+          padding: 0.25rem; 
+          padding-right:2rem; /* arrow clearence for long text */
           border-radius: 1.5rem;
           &:hover {
             color: $white;
@@ -113,30 +122,34 @@ cagov-navoverlay {
           }
           &:focus {
             //background: $darkblue;
+            /* jbum omit
             color: $white;
             box-shadow: 0 0 0 2px $white;
             padding-left: 0.5rem;
             @include tablet {
             }
+            */
           }
+          
           &.white {
             color: $white;
           }
+          
           @include tablet {
             cursor: default;
             &:hover {
               color: $orange;
             }
+            /*
             &:focus {
               color: $white;
-            }
-            text-decoration: inherit;
-            font-size: 1rem;
+            } */
+            /* text-decoration: inherit; */
             width: auto;
           }
-          @include desktop {
+          /* @include desktop {
             font-size: 1.1rem;
-          }
+          } */
         }
         &-arrow {
           @include size(1rem, 1rem);
@@ -167,8 +180,10 @@ cagov-navoverlay {
       }
       &-link {
         color: $white;
-        font-weight: 700;
-        padding: 0.5rem 0.25rem;
+        font-family: $body;
+        font-weight: 400;
+        font-size: 1.2rem;
+        padding: .5rem 0.25rem;
         margin: 0.15rem 0 0.15rem 2px;;
         display: table;
         transition: color 0.3s $slow-curve;
@@ -177,16 +192,19 @@ cagov-navoverlay {
           margin-top: 0.7em;
         }
         @include tablet {
-          padding: .35rem .7rem;
+          padding: 1rem 0;
           margin: 0 0 0 2px;
           line-height: 1.1rem;
         }
         @include desktop {
-          padding: .35rem .7rem;
+          padding: 1rem 0;
+        }
+        @include phone {
+          padding: 0.35rem 0;
         }
         &:hover,
         &:active {
-          color: $yellow;
+          color: $white;
         }
         &:focus {
          // background: $yellow;
