--- a/src/css/_index.scss
+++ b/src/css/_index.scss
@@ -40,6 +40,7 @@
 @import './survey';
 @import './dashboard';
 @import './equitydash';
+@import './charts';
 
 /* Overrides for non-English languages. */
 @import './multilingual';
