--- a/src/js/equity-dash/charts/social-determinants/index.scss
+++ b/src/js/equity-dash/charts/social-determinants/index.scss
@@ -16,4 +16,18 @@ cagov-chart-d3-bar {
   .bar-label tspan.bold {
     font-weight: bold;
   }
+  @media (max-width: 900px) {
+    .bar-chart-label.label {
+      font-size: 0.85rem;
+    }
+    .bar-label tspan {
+      font-size: 0.85rem;
+    }
+    .bar-chart-label.label {
+      font-size: 1rem;
+    }
+    // .tick text {
+    //   font-size: 0.85rem;
+    // }
+  }
 }
