--- a/src/css/_charts.scss
+++ b/src/css/_charts.scss
@@ -1,13 +1,22 @@
+/* Classes outside of charts, but intended for charts */
 .chart-data-label {
   font-size: 0.95rem;
 }
 
-
+/* Charts */
 .chart {
   position: relative;
   display: block;
   margin: auto;
   width: 100%;
+
+  .svg-holder {
+    max-width: 613px;
+  }
+
+  .svg-holder svg {
+    width: 100%;
+  }
 
   .chart-title {
     max-width: 613px;
@@ -16,13 +25,6 @@
     padding-bottom: 0.3em;
     margin-bottom: 1em;
   }
-
-  // Origin from social
-  //   .chart-title {
-  //     margin: 50px auto 20px;
-  //     max-width: 720px;
-  //     border-bottom: solid 1px;
-  //   }
 
   .chart-title::first-letter {
     text-transform: capitalize;
@@ -50,34 +52,31 @@
     }
   }
 
-  .svg-holder {
-    max-width: 613px;
-  }
-  .svg-holder svg {
-    width: 100%;
-  }
+  /* Text labels */
 
-  .bars {
-    font-weight: bold;
-    font-size: 0.95rem;
-    text-anchor: unset;
-    // text-anchor: end;
-  }
   .more-than-labels {
     font-size: 0.75rem;
   }
+
   .change-from-month-labels {
     font-size: 0.75rem;
     text-anchor: unset; // new
   }
+
+  .label {
+    font-size: 0.95rem;
+  }
+
   .bar-label {
     font-weight: bold;
     font-size: 0.95rem;
     text-anchor: unset;
   }
+  
   .bar-label .tick text {
     text-transform: capitalize;
   }
+
   .tick text {
     font-size: 0.85rem;
   }
@@ -90,40 +89,30 @@
     font-size: 0.85rem;
   }
 
-  @media (max-width: 768px) {
-    .bar-chart-label.label {
-      font-size: 0.75rem;
-    }
-    .bar-label tspan {
-      font-size: 0.75rem;
-    }
-    .bar-chart-label.label {
-      font-size: 0.85rem;
-    }
-    .tick text {
-      font-size: 0.7rem;
-    }
-    .legend-label {
-      font-size: 0.85rem;
-    }
-  }
-
-  // social
   .inline-toggle-link-container {
     text-align: center;
   }
 
-  .label {
-    font-size: 0.95rem;
-    // font-weight: bold; equitydash
-    // font-weight: normal;
-    // font-size: 0.95rem;
-    // color: #1f2574;
-  }
   .highlight-data {
     font-weight: bold;
     padding-right: 2px; // not in cagov chart
   }
+
+  .bars {
+    font-weight: bold;
+    font-size: 0.95rem;
+    text-anchor: unset;
+    // text-anchor: end;
+  }
+
+  .bar-overlay {
+    position: absolute;
+    z-index: 10;
+    visibility: hidden;
+    background: #fff;
+    width: 250px;
+  }
+  
   .chart-tooltip {
     position: absolute;
     z-index: 10;
@@ -144,11 +133,26 @@
     min-width: 300px;
   }
 
-  .bar-overlay {
-    position: absolute;
-    z-index: 10;
-    visibility: hidden;
-    background: #fff;
-    width: 250px;
+  /* Responsive text */
+  @media (max-width: 768px) {
+    .bar-chart-label.label {
+      font-size: 0.75rem;
+    }
+    .bar-label tspan {
+      font-size: 0.75rem;
+    }
+    .bar-chart-label.label {
+      font-size: 0.85rem;
+    }
+    .tick text {
+      font-size: 0.7rem;
+    }
+    .legend-label {
+      font-size: 0.85rem;
+    }
   }
+}
+
+cagov-chart-d3-bar {
+
 }
