added button URL parameter to the home[age video button

--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -207,7 +207,7 @@
 					</a>
 				</article>
 
-				<a href="https://{{item["VideoURL"]}}" data-video="{{item["VideoID"]}}" class="link-arrow-blue video-modal-open trigger mt-4" data-video="{{item["VideoID"]}}">
+				<a href="https://{{item["ButtonURL"]}}" data-video="{{item["ButtonVideoID"]}}" class="link-arrow-blue video-modal-open trigger mt-4" data-video="{{item["VideoID"]}}">
 					<div class="link-arrow-label">{{item["ButtonText"]}}</div>
 					<cagov-arrow></cagov-arrow>
 				</a>
