--- a/src/css/_charts.scss
+++ b/src/css/_charts.scss
@@ -1,9 +1,11 @@
 /* Classes outside of charts, but intended for charts */
+
 .chart-data-label {
   font-size: 0.95rem;
 }
 
 /* Charts */
+
 .chart {
   position: relative;
   display: block;
@@ -105,7 +107,7 @@
     // text-anchor: end;
   }
 
-  .bar-overlay {
+  .tooltip-container {
     position: absolute;
     z-index: 10;
     visibility: hidden;
@@ -151,8 +153,4 @@
       font-size: 0.85rem;
     }
   }
-}
-
-cagov-chart-d3-bar {
-
 }
