--- a/src/css/_hero-stats.scss
+++ b/src/css/_hero-stats.scss
@@ -109,8 +109,8 @@ hero-stats {
 			}
 		}
 		&-background {
-			background: $lightblue;
-			color: $darkblue;
+			background: $white;
+			color: $blue;
 			padding: 0 .2em;
 	    line-height: 1.2;
 			transition: background .6s $slow-curve;
@@ -120,7 +120,8 @@ hero-stats {
 		}
 	}
 	&-subhead {
-		color: $lightblue;
+		color: $white;
+		font-weight: 700;
 	}
 	&-photo {
 		@include absolute(left 0 top 0);
@@ -423,7 +424,7 @@ hero-stats {
 			}
 		}
 		&-headline {
-			color: $darkblue;
+			color: $blue;
 			@extend %headline4;
 			line-height: 1.2;
 			margin-bottom: .25rem;
