updated alert font style

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -936,8 +936,8 @@ a.navbar-brand:visited {
   border: 0;
   border-left: 4px solid #ffc107;
   border-radius: 0;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 .alert-info,
