--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -189,7 +189,7 @@
 			{% for item in RowsVid %}
 			<div class="container">
 			<div class="row">
-			<div class="col-lg-8 mx-auto text-center">
+			<div class="col-lg-10 mx-auto text-center">
 			<h2 class="color-purple mb-0 pb-2">{{item["Video Title"]}}</h2>
 			<p class="mb-3 text-300">{{item["Description"]}}</p>
 				<article class="video-item mx-auto mt-3" data-video="{{item["VideoID"]}}">
@@ -205,7 +205,7 @@
 					</a>
 				</article>
 
-				<a href="https://{{item["ButtonURL"]}}" data-video="{{item["ButtonVideoID"]}}" class="link-arrow-blue video-modal-open trigger mt-4" data-video="{{item["VideoID"]}}">
+				<a href="https://{{item["ButtonURL"]}}" class="link-arrow-blue mt-4" data-video="{{item["VideoID"]}}">
 					<div class="link-arrow-label">{{item["ButtonText"]}}</div>
 					<cagov-arrow></cagov-arrow>
 				</a>
