fix incorrect data bindings for relative percentage charts

--- a/src/css/_charts.scss
+++ b/src/css/_charts.scss
@@ -95,11 +95,6 @@
     text-align: center;
   }
 
-  .highlight-data {
-    font-weight: bold;
-    padding-right: 2px; // not in cagov chart
-  }
-
   .bars {
     font-weight: bold;
     font-size: 0.95rem;
@@ -116,15 +111,21 @@
   }
   
   .chart-tooltip {
-    position: absolute;
-    z-index: 10;
-    visibility: hidden;
-    background: #fff;
+    // position: absolute;
+    // z-index: 10;
+    // visibility: hidden;
+    // background: #fff;
     pointer-events: none;
 
     padding: 10px;
     box-shadow: -12px 11px 5px -4px rgba(0, 0, 0, 0.4);
     border: solid 1px #ccc;
+    min-width: 100px;
+  }
+
+  .highlight-data {
+    font-weight: bold;
+    padding-right: 2px; // not in cagov chart
   }
 
   .chart-tooltip-narrow {
