updated list arrows font size and arrows

--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -496,7 +496,7 @@ learn-more-section {
       @extend %wrap;
       @include tablet {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
       }
     }
   }
@@ -924,7 +924,7 @@ faq-section {
 /* ARROW LIST : List links with arrows */
 @mixin list-link-arrow {
   font-family: "Roboto",sans-serif;
-  font-size: 1rem;
+  font-size: 1.5rem;
   line-height: 1.2;
   font-weight: 700;
   text-decoration:none !important;
@@ -932,7 +932,7 @@ faq-section {
   display:flex;
   justify-content: left;
   transition: none;
-  padding: 0.75rem;
+  padding: 1rem 0.75rem;
   border-bottom: 1px solid;
   
 }
@@ -943,9 +943,9 @@ faq-section {
     margin-right:auto;
   }
   .link-arrow-icon {
-    width: 1.85rem;
-    height: 1.85rem; 
-    border:1px solid;
+    width: 2.75rem;
+    height: 2.75rem; 
+    border:2px solid;
     border-radius: 50%;
     padding:0;
     overflow:hidden;
@@ -953,13 +953,16 @@ faq-section {
     margin-left: 1rem;
     }
   .link-arrow-icon-svg {
-    width: 42px;
+    width: 60px;
     height:100%;
     position:relative;
     transition: all .3s ease;
-    right:20px;
+    right:28px;
   }
 } 
+
+
+
 
 //blue arrow list link
 .arrow-links {
@@ -986,7 +989,7 @@ faq-section {
           border-color:$orange;
           .arrow1, .arrow2 {fill:$orange;}
         }
-        .link-arrow-icon-svg {right:-7px;}
+        .link-arrow-icon-svg {right:-10px;}
       }
       &:focus {outline: 2px solid $yellow !important;}
     }
@@ -1020,7 +1023,7 @@ faq-section {
           border-color:$orange;
           .arrow1, .arrow2 {fill:$orange;}
         }
-        .link-arrow-icon-svg {right:-7px;}
+        .link-arrow-icon-svg {right:-10px;}
       }
       &:focus {outline: 2px solid $yellow !important;}
     }
