work on message box, but needs more work & also the logic doesn't seem to line up for this chart

--- a/src/js/equity-dash/charts/relative-percentage-by-pop/index.scss
+++ b/src/js/equity-dash/charts/relative-percentage-by-pop/index.scss
@@ -35,7 +35,7 @@ cagov-chart-re-pop {
   // }
 
   .change-from-month-labels {
-    font-size: 0.75rem;
+    font-size: 0.75em;
     text-anchor: unset;
   }
 
