--- a/src/js/equity-dash/charts/social-determinants/index.scss
+++ b/src/js/equity-dash/charts/social-determinants/index.scss
@@ -21,9 +21,21 @@ cagov-chart-d3-bar {
   .bar-label tspan.bold {
     font-weight: bold;
   }
+
   @media (max-width: 768px) {
     .chart-title {
       margin: 50px 20px 20px 20px;
     }
+  }
+
+  @media (max-width: 440px) {
+    
+      .tick text {
+        font-size: 0.5rem !important;
+      }
+      .bar-label tspan {
+        font-size: 0.6rem !important;
+      }
+    
   }
 }
