this is homepage updates bundle

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -389,18 +389,30 @@ h6,
   font-weight: 700;
 }
 h1 {
+  font-size: 2.3rem;
   padding-bottom: 0.25rem;
+  color: #1f2574;
 }
+.h1 {font-size: 2.3rem; color: #1f2574;}
 
 h2 {
+  font-size: 2rem;
   padding-top: 0.25rem;
   padding-bottom: 0.5rem;
 }
+.h2 {font-size: 2rem;}
 
 h3 {
+  font-size: 1.5rem;
   padding-bottom: 1rem;
   padding-top: 0.75rem;
+  font-family: "Roboto", sans-serif !important;
 }
+.h3 {font-size: 1.5rem; font-family: "Roboto", sans-serif !important;}
+
+h4, .h4 {font-size: 1.4rem; font-family: "Roboto", sans-serif !important;}
+
+h5, .h5 {font-size: 0.8rem; }
 
 /* General */
 
@@ -514,6 +526,9 @@ li,
 .color-orange-hover:hover, .color-orange-hover:focus {
     color: #ff8000 !important;
 }
+.color-white {
+  color: $white;
+}
 .color-purple {
     color: #1f2574 !important;
 }
@@ -525,6 +540,23 @@ li,
 }
 .color-secondary-hover:hover, .color-secondary-hover:focus  {
     color:#92c5de!important;
+}
+.bullet-orange li {
+  list-style: none;    
+  position: relative;
+  margin-bottom: .7rem;
+  &::before {
+    content: "";
+    background: #ff8000;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 0.5rem;
+    position:absolute;
+    top: 7px;
+    left: -30px;
+  }
 }
 
 /* Pagination */
@@ -567,7 +599,7 @@ a:hover,
 }
 
 :focus {
-  outline: 2px solid #004abc;
+  outline: 2px solid $yellow;
 }
 
 /* Action Link */
@@ -690,11 +722,6 @@ th {
 .toggle-link-container {
   width: 100%;
   margin: 20px;
-}
-.grid-layout-hd.toggle-links {
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-  max-width: 420px;
-  margin: 0 auto;
 }
 
 /* Text */
@@ -909,8 +936,8 @@ a.navbar-brand:visited {
   border: 0;
   border-left: 4px solid #ffc107;
   border-radius: 0;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 .alert-info,
@@ -1065,7 +1092,6 @@ a.navbar-brand:visited {
 .jumbotron-reverse h1 {
     color: #000;
 }
-
 .jumbotron-reverse {
     background: #fff;
 }
@@ -1250,7 +1276,7 @@ li.list-group-item.alpha-footer {
 }
 
 .list-group-item-action:focus {
-  outline: 2px solid #0257d5;
+  outline: 2px solid $yellow;
   box-shadow: 0 0 0 0.2rem #fff;
 }
 
@@ -1351,7 +1377,7 @@ li.list-group-item.unstyled.no-border {
 }
 
 li .action-link:focus-within {
-  outline: 2px solid #004abc;
+  outline: 2px solid $yellow;
 }
 
 .bg-light {
@@ -1642,6 +1668,27 @@ button#dropdown-menu-button:focus {
   .font-size-1-5em {
 	font-size:1.5rem !important;
   }
+  .font-size-1-4em {
+    font-size:1.4rem !important;
+    }
+  .font-size-1-3em {
+    font-size:1.3rem !important;
+    }
+  .font-size-1-2em {
+    font-size:1.2rem !important;
+    }
+  .font-size-1-1em {
+    font-size:1.1rem !important;
+    }
+  .font-size-1em {
+    font-size:1rem !important;
+    }
+  .font-size-0-95em {
+    font-size:.95rem !important;
+    }
+ .font-size-0-9em {
+    font-size:.9rem !important;
+    }
 /*Line heihght*/
 .line-height-0-8 {
 	line-height:.8em;
@@ -1749,12 +1796,6 @@ pre {
   font-size: 1em;
 }
 
-a {
-	background-color: transparent;
-}
-a:focus {
-	outline: none;
-}
 
 abbr[title] {
   border-bottom: none;
@@ -1828,7 +1869,7 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+  outline: 2px solid $yellow;
 }
 
 fieldset {
@@ -1886,6 +1927,7 @@ font {
 
 .bg-transparent {background-color:transparent !important;}
 .text-small {font-size:.85rem !important;}
+.text-xs {font-size:.75rem !important;}
 .text-black {color:#000 !important;}
 .bg-purple-alert {background-color:#E6D5E1 !important;}
 .bg-red-alert {background-color:#F3D8DD !important;}
@@ -1921,8 +1963,12 @@ font {
 .pos-rel { position: relative; }
 
 .bd-lightblue {border: 2px solid $lightestblue !important;}
-.bd-right-black {border-right: 1px solid black !important;}
+.bd-right-black {border-right: 1px solid black!important;}
 .bd-blue {border: 1px solid $blue !important;}
+.bd-right-black {border-right:1px solid #000000;}
+.bd-bottom-black {border-bottom:1px solid #000000;}
+.bd-top-black {border-top:1px solid #000000;}
+.bd-left-black {border-left:1px solid #000000;}
 .bd-darkblue {border: 1px solid $darkblue !important;}
 .bd-ccc { border: solid 1px #ccc; }
 
