--- a/pages/_includes/news-feed-home.html
+++ b/pages/_includes/news-feed-home.html
@@ -18,12 +18,11 @@
           {%- endfor -%}
     
       </div>
-    
-      <a class="button trigger cwdsarrow-parent" href="latest-news/">
-        <div class="button-label">{{varViewMoreNews}}</div>
-        <cwds-arrow data-class-prefix="more-news" data-class-list="cwdsarrow-size-md cwdsarrow-idle-blue cwdsarrow-hover-darkblue cwdsarrow-focus-orangeback"></cwds-arrow>
-
+      <a href="latest-news/" class="link-arrow-blue">
+        <div class="link-arrow-label">{{varViewMoreNews}}</div>
+        <cagov-arrow></cagov-arrow>
       </a>
+     
     
     </div>
     </section>
