--- a/src/css/_video.scss
+++ b/src/css/_video.scss
@@ -1,3 +1,8 @@
+.video-thumb-link {
+  display: block;
+  &:focus {outline: 2px solid $yellow;}
+}
+
 .video-thumb-photo {
   background: #003d9d;
   position: relative;
@@ -5,62 +10,44 @@
   overflow: hidden;
 }
 .video-thumb-photo-img {
-  opacity: 0.75;
   width: 100%;
-  transition: 1s cubic-bezier(0.15, 0.92, 0.14, 0.95);
 }
 .video-thumb-play-button {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.5);
   z-index: 250;
   width: 5rem;
   height: 5rem;
+  border: 4px solid $orange;
   border-radius: 50%;
-  padding: 1.5rem 1.3rem 1.5rem 1.7rem;
+  padding: .9rem .5rem .5rem 1.2rem;
   margin: 0 auto 1rem;
-  transition: all 0.5s cubic-bezier(0.57, 0.2, 0.21, 0.89);
+  transition: border-color .3s;
+ // transition: all 0.5s cubic-bezier(0.57, 0.2, 0.21, 0.89);
 }
-.video-thumb-play-button:hover {
-  background: white;
-  box-shadow: 0 0.5rem 1.5rem 0 rgba(0, 0, 0, 0.3);
-}
+
 .video-thumb-play-button-icon {
   width: 100%;
   max-height: 4rem;
-  fill: #003d9d;
-  transition: fill 0.5s cubic-bezier(0.57, 0.2, 0.21, 0.89);
+  fill: $orange;
+  //transition: fill 0.5s cubic-bezier(0.57, 0.2, 0.21, 0.89);
   position: relative;
   left: 0.2rem;
 }
-.video-thumb-link:hover .video-thumb-photo {
-  box-shadow: 0 0.5rem 1.5rem 0 rgba(0, 0, 0, 0.3);
+
+.video-thumb-play-button:hover {
+  border-color: $blue;
+  .video-thumb-play-button-icon {
+    fill: $blue;
+  }
 }
-.video-thumb-link:hover .video-thumb-photo-img {
-  opacity: 1;
-  width: 110%;
-  height: 110%;
+.video-thumb-play-button:focus { 
+  outline: 2px solid $yellow;
 }
-.video-thumb-link:hover .video-thumb-play-button {
-  background: rgba(255, 255, 255, 0.8);
-}
-.video-thumb-link:hover .video-thumb-play-button-icon {
-  fill: #1f2574;
-}
-.video-thumb-link:focus .video-thumb-photo {
-  box-shadow: 0 0 0 4px #ecca00, 0 0.5rem 1.5rem 0 rgba(0, 0, 0, 0.3);
-}
-.video-thumb-link:focus .video-thumb-photo-img {
-  opacity: 1;
-}
-.video-thumb-link:focus .video-thumb-play-button {
-  background: rgba(255, 255, 255, 0.8);
-}
-.video-thumb-link:focus .video-thumb-play-button-icon {
-  fill: #ff8000;
-}
+
 
 .video-modal {
   position: fixed;
