work on sort ratio, add notes

--- a/src/css/_charts.scss
+++ b/src/css/_charts.scss
@@ -79,6 +79,10 @@
     text-anchor: unset;
   }
 
+  .bars.bars-unknown {
+    font-weight: 100;
+    font-size: 0.7rem;
+  }
   .bar-chart-label.label {
     font-weight: 100;
   }
