--- a/src/css/_charts.scss
+++ b/src/css/_charts.scss
@@ -79,6 +79,18 @@
     text-anchor: unset;
   }
 
+  .bars.bars-unknown {
+    font-weight: 100;
+    font-size: 0.7rem;
+  }
+  .bar-label.bar-label-unknown {
+    color: #ccc;
+  }
+  
+  .chart-description {
+    min-height: 4rem;
+  }
+
   .bar-chart-label.label {
     font-weight: 100;
   }
