added vaccines link, updated tabs mobile

--- a/src/css/cagov-font.scss
+++ b/src/css/cagov-font.scss
@@ -22,122 +22,94 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 .ca-gov-icon-instagram:before {
-  content: "\e9dd";
-}
-
-.ca-gov-icon-share-instagram:before {
-  content: "\e9f9";
-}
-
-.ca-gov-icon-air:before {
-  content: "\e9de";
-}
-
-.ca-gov-icon-air-polution:before {
-  content: "\e9df";
-}
-
-.ca-gov-icon-air-quality:before {
-  content: "\e9e0";
-}
-
-.ca-gov-icon-anchor:before {
-  content: "\e9e1";
-}
-
-.ca-gov-icon-bambinton:before {
-  content: "\e9e2";
-}
-
-.ca-gov-icon-baseballl:before {
-  content: "\e9e3";
-}
-
-.ca-gov-icon-basketball:before {
-  content: "\e9e4";
-}
-
-.ca-gov-icon-bath:before {
-  content: "\e9e5";
-}
-
-.ca-gov-icon-billiards:before {
-  content: "\e9e6";
-}
-
-.ca-gov-icon-bowling:before {
-  content: "\e9e7";
-}
-
-.ca-gov-icon-care-tweezers:before {
-  content: "\e9e8";
-}
-
-.ca-gov-icon-church:before {
-  content: "\e9e9";
-}
-
-.ca-gov-icon-down:before {
-  content: "\e9ea";
-}
-
-.ca-gov-icon-down-left:before {
-  content: "\e9f0";
-}
-
-.ca-gov-icon-down-right:before {
-  content: "\e9ec";
-}
-
-.ca-gov-icon-external-link:before {
-  content: "\e9ed";
-}
-
-.ca-gov-icon-football:before {
-  content: "\e9ee";
-}
-
-.ca-gov-icon-golf:before {
   content: "\e9ef";
 }
-
+.ca-gov-icon-share-instagram:before {
+  content: "\e9f4";
+}
+.ca-gov-icon-air:before {
+  content: "\e9dd";
+}
+.ca-gov-icon-air-polution:before {
+  content: "\e9de";
+}
+.ca-gov-icon-air-quality:before {
+  content: "\e9df";
+}
+.ca-gov-icon-anchor:before {
+  content: "\e9e0";
+}
+.ca-gov-icon-bambinton:before {
+  content: "\e9e1";
+}
+.ca-gov-icon-baseballl:before {
+  content: "\e9e2";
+}
+.ca-gov-icon-basketball:before {
+  content: "\e9e3";
+}
+.ca-gov-icon-bath:before {
+  content: "\e9e4";
+}
+.ca-gov-icon-billiards:before {
+  content: "\e9e5";
+}
+.ca-gov-icon-bowling:before {
+  content: "\e9e6";
+}
+.ca-gov-icon-care-tweezers:before {
+  content: "\e9e7";
+}
+.ca-gov-icon-church:before {
+  content: "\e9e8";
+}
+.ca-gov-icon-down:before {
+  content: "\e9e9";
+}
+.ca-gov-icon-down-left:before {
+  content: "\e9ea";
+}
+.ca-gov-icon-down-right:before {
+  content: "\e9eb";
+}
+.ca-gov-icon-external-link:before {
+  content: "\e9ec";
+}
+.ca-gov-icon-football:before {
+  content: "\e9ed";
+}
+.ca-gov-icon-golf:before {
+  content: "\e9ee";
+}
 .ca-gov-icon-left:before {
   content: "\e9f0";
 }
-
 .ca-gov-icon-nail-polish:before {
   content: "\e9f1";
 }
-
 .ca-gov-icon-personal-care:before {
   content: "\e9f2";
 }
-
 .ca-gov-icon-right:before {
   content: "\e9f3";
 }
-
 .ca-gov-icon-soccer:before {
-  content: "\e9f4";
-}
-
-.ca-gov-icon-tennis:before {
   content: "\e9f5";
 }
-
-.ca-gov-icon-up:before {
+.ca-gov-icon-tennis:before {
   content: "\e9f6";
 }
-
-.ca-gov-icon-up-left:before {
+.ca-gov-icon-up:before {
   content: "\e9f7";
 }
-
-.ca-gov-icon-up-right:before {
+.ca-gov-icon-up-left:before {
   content: "\e9f8";
 }
+.ca-gov-icon-up-right:before {
+  content: "\e9f9";
+}
+
 
 
 
