Changed titles, added x-axis label on big blue bar chart. Updated WP to match. Turned off some wordy logging.

--- a/src/css/_charts.scss
+++ b/src/css/_charts.scss
@@ -114,6 +114,11 @@
     // text-anchor: end;
   }
 
+  .xaxis-label {
+    font-weight: bold;
+    font-size: 0.95rem;
+  }
+
   /* Responsive text */
   @media (max-width: 768px) {
     .bar-chart-label.label {
