--- a/src/js/equity-dash/charts/relative-percentage-by-pop/index.scss
+++ b/src/js/equity-dash/charts/relative-percentage-by-pop/index.scss
@@ -17,12 +17,16 @@ cagov-chart-re-pop {
   // }
 
   .svg-holder-second {
-    border-top: solid 2px #000;
+    border-top: solid 1px #000;
     margin-top: 10px;
     padding-top: 30px;
     svg {
       width: 100%;
     }
+  }
+
+  .chart-overlaybox-container {
+    top: 23%;
   }
 
   // .bars {
