Code cleanup. Fixed bottom margins on big blue chart for mobile/tablet. Minor tweaks for Spanish on line chart.

--- a/src/css/_charts.scss
+++ b/src/css/_charts.scss
@@ -107,6 +107,10 @@
     font-size: 0.85rem;
   }
 
+  text.y-label {
+    font-size: 0.85rem;
+  }
+
   .bars {
     font-weight: bold;
     font-size: 0.95rem;
